@@ -35,7 +35,7 @@ class Categoryfinder {
 	/**
 	 * Constructor (currently empty).
 	*/
-	function Categoryfinder () {
+	function __construct() {
 	}
 
 	/**
